Fix wrap toggle placement

--- a/assets/components/code-block.css
+++ b/assets/components/code-block.css
@@ -68,8 +68,8 @@
 
   .line > *,
   .line::before {
-    padding-block-start: calc(var(--first) * 1em);
-    padding-block-end: calc(var(--last) * 1em);
+    padding-block-start: calc(var(--first) * 2em);
+    padding-block-end: calc(var(--last) * 2em);
   }
 
   .line::before {
@@ -102,9 +102,8 @@
     position: absolute;
     right: 0.6em;
     bottom: 0.6em;
-    padding: 0.25em;
+    padding: 0;
     font-weight: 500;
-    padding: 0.25em;
   }
 
   .toggle--hidden {
